test/visibility/except/exceptPrivateSymbol.good
exceptPrivateSymbol.chpl:8: error: 'b' undeclared (first use this function)
